# pragmatic-haskell

./: .gitignore  README.md  bahug.cabal  circle.yml  message.foo  newmessages.foo  pragmatic-haskell.cabal  safemessage.foo  specs.foo
app/: Main.hs
src/: Entities.hs  FooParser.hs
test/: FooParserSpec.hs
